tests/NormalTests/paczka1/fuzzy1/82385360.err
Error in line 2: sPr4i A250 46,5
Error in line 12: DeYUpMnl S445 73,2
Error in line 13: DeYUpMnl A250 93,7
Error in line 32: KK0 S827 9,5
Error in line 37: bmEKTccv A250 37,8
